force-app/main/default/objects/Boni_Setting__mdt/Boni_Setting__mdt.object-meta.xml
<CustomObject>
    <description>본이 대시보드 임계값·시간 설정. DeveloperName=Default 1건만 읽는다. 값 변경은 배포 없이 레코드 수정.</description>
    <label>Boni Setting</label>
    <pluralLabel>Boni Settings</pluralLabel>
</CustomObject>