force-app/main/default/objects/Boni_Setting__mdt/fields/Briefing_Hour__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Hour__c</fullName>
    <description>아침 브리핑 시(KST, 0-23). 기본 7 (분은 30 고정)</description>
    <label>Briefing Hour</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>