force-app/main/default/objects/Boni_Setting__mdt/fields/Maturity_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Window_Days__c</fullName>
    <description>만기 도래 섹션에 포함할 일수(오늘 포함). 기본 7</description>
    <label>Maturity Window Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>