force-app/main/default/objects/Boni_Setting__mdt/fields/Signal_Days__c.field-meta.xml
<CustomField>
    <fullName>Signal_Days__c</fullName>
    <description>시그널 최근 일수. 기본 3</description>
    <label>Signal Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>