force-app/main/default/objects/Boni_Setting__mdt/fields/Stale_Days__c.field-meta.xml
<CustomField>
    <fullName>Stale_Days__c</fullName>
    <description>파이프라인 정체 판정 일수(Stage 미변경). 기본 14</description>
    <label>Stale Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>