force-app/main/default/objects/Boni_Setting__mdt/fields/Wrapup_Hour__c.field-meta.xml
<CustomField>
    <fullName>Wrapup_Hour__c</fullName>
    <description>마감 리포트 시(KST). 기본 18</description>
    <label>Wrapup Hour</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>